[package]
name = "rbf"
version = "0.1.0"
authors = ["slerpy"]

description = "A simple optimizing Brainfuck interpreter written in Rust"
repository = "https://github.com/slerpyyy/rbf"

edition = "2018"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[dependencies]
getopts = "0.2.21"
